font size fixes bug that made my name too big to fit only in the header

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ a:hover {
 
 #logo-container {
   font-family: "Playlist";
+  font-size: 2rem;
 }
 
 .dark-mode {
